# lattice

./: .env.example  .gitignore  .npmrc  .pre-commit-config.yaml  .secrets.baseline  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json
.github/: CODEOWNERS
.github/instructions/: lattice-airflow-orchestrator.md  lattice-contracts-schema.md  lattice-infra-datadog.md  lattice-kafka-governance.md  lattice-milvus-vector-index.md  lattice-observability-datadog.md  lattice-observability-newrelic.md  lattice-secrets-identity.md  lattice-telemetry-tagging.md
.github/workflows/: ci.yml  detect-changes.yml  policy.yml  terraform-confluent.yml  terraform-datadog.yml  terraform-newrelic.yml
apps/workers/: README.md
apps/workers/attachment-chunker/: .env.example  Dockerfile  README.md  package.json
apps/workers/attachment-chunker/src/: main.ts
apps/workers/audit-writer/: Dockerfile  package.json
apps/workers/audit-writer/src/: app.module.ts  main.ts
apps/workers/es-upserter/: .env.example  Dockerfile  README.md  package.json
apps/workers/es-upserter/src/: app.module.ts  main.ts
apps/workers/mail-chunker/: .env.example  Dockerfile  README.md  package.json  tsconfig.json  vitest.config.ts
apps/workers/mail-chunker/src/: app.module.ts  main.ts
apps/workers/mail-deleter/: Dockerfile  package.json  tsconfig.json
apps/workers/mail-deleter/src/: app.module.ts  main.ts
apps/workers/mail-embedder/: Dockerfile  package.json
apps/workers/mail-embedder/src/: app.module.ts  main.ts
apps/workers/mail-extractor/: .env.example  Dockerfile  package.json
apps/workers/mail-extractor/src/: main.ts
apps/workers/mail-ocr-normalizer/: .env.example  Dockerfile  package.json
apps/workers/mail-ocr-normalizer/src/: app.module.ts  main.ts
apps/workers/mail-parser/: .env.example  Dockerfile  README.md  package.json
apps/workers/mail-upserter/: Dockerfile  package.json
apps/workers/ocr-worker/: .env.example  Dockerfile  package.json  tsconfig.json
apps/workers/ocr-worker/src/: main.ts
contracts/kafka/envelope/: v1.json
contracts/kafka/mail/: README.md
docs/: telemetry-tags.md
docs/_experimental/ai_governance_sdlc/: README.md
docs/_experimental/dev/: setup.md
docs/_experimental/email/: README.md
docs/_experimental/inspiration/: confluent.md  datadog.md  elevenlabs.md
docs/_experimental/prompts/: bootstrap-prompt.md
docs/adr/: ADR-001-worker-framework.md
docs/ai/: context-dags.md  context.md
docs/architecture/: README.md  logging-architecture.md  mail-sources.md  ocr-routing.md  scope-v1-revised.md  scope-v1.md  worker-template.md
docs/architecture/adr/: ADR-002-logging-diagnosis.md
docs/dev/: setup.md
docs/environments/: prod_audit.md
docs/runbooks/: README.md  datadog-observability.md  demo-two-inboxes-airflow.md  demo-two-inboxes.md  embedding-provider-change.md  local-development.md  mail-deletion.md  phase-7-signoff.md  retention-sweep.md
docs/troubleshooting/: error-investigation.md
docs/workers/: README.md
infra/confluent/: .gitignore  README.md  main.tf  outputs.tf  providers.tf  secrets.tf  security.tf  terraform.tfvars.example  topics.tf  variables.tf  versions.tf
infra/datadog/: .gitignore  README.md  dashboard.tf  main.tf  monitor_availability.tf  monitor_deployment.tf  monitor_dlq.tf  monitor_errors.tf  monitor_kafka.tf  monitor_latency.tf  outputs.tf  pipelines.tf  terraform.tfvars.example  variables.tf  versions.md  versions.tf
infra/local/compose/: .env.example  README.md  datadog.yml  lattice-core.yml  lattice-ocr.yml  lattice-workers.yml  newrelic-logging.yml
infra/local/postgres/: Dockerfile  init.sql
infra/newrelic/: README.md  alert_availability.tf  alert_dlq.tf  alert_errors.tf  alert_kafka.tf  alert_latency.tf  dashboard.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
python/: .env.example  Dockerfile  entrypoint.sh
python/dags/: lattice_gmail_backfill.py  lattice_gmail_sync_incremental.py  lattice_imap_backfill.py  lattice_imap_sync_incremental.py  lattice_mail_backfill.py  lattice_mail_sync_incremental.py  lattice_mail_tasks.py  lattice_retention_sweep.py
python/libs/lattice_common/: pyproject.toml
python/libs/lattice_common/src/lattice_common/: __init__.py  config.py  logging.py
python/libs/lattice_contracts/: pyproject.toml
python/libs/lattice_kafka/: pyproject.toml
python/libs/lattice_kafka/src/lattice_kafka/: __init__.py  producer.py
python/libs/lattice_mail/: pyproject.toml
python/libs/lattice_mail/src/lattice_mail/: __init__.py  account_registry.py  raw_event.py  watermarks.py
python/libs/lattice_mail/src/lattice_mail/connectors/: __init__.py  gmail_connector.py  imap_connector.py
python/libs/lattice_mail/tests/: __init__.py  test_alias_routing.py
python/libs/lattice_storage/: pyproject.toml
python/libs/lattice_storage/src/lattice_storage/: __init__.py  object_store.py
python/scripts/: demo_fetch_two_inboxes.py  seed_mail_accounts.py  test_gmail_connection.py  test_imap_connection.py
python/services/evaluator/: pyproject.toml
python/services/extractor/: pyproject.toml
tools/generators/new-worker/: generate.ts
tools/postman/: Gmail_OAuth_Flow.postman_collection.json
tools/scripts/: compose-validate.ts  diagnose-logging.ts  emit-deploy-marker.sh  telemetry-lint.ts
(+141 files in other folders)
