[project]
name = "lattice-common"
version = "0.1.0"
description = "Shared utilities for Lattice Python components"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.0",
    "python-json-logger>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lattice_common"]
