[project]
name = "lattice-contracts"
version = "0.1.0"
description = "Shared data contracts for Lattice Python components"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lattice_contracts"]
