[project]
name = "lattice-kafka"
version = "0.1.0"
description = "Kafka producer/consumer for Lattice Python components"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka>=2.3.0",
    "pydantic>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lattice_kafka"]
