[project]
name = "lattice-mail"
version = "0.1.0"
description = "Mail processing utilities for Lattice"
requires-python = ">=3.11"
dependencies = [
    "lattice-common",
    "lattice-contracts",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lattice_mail"]
