[project]
name = "lattice-mail"
version = "0.1.0"
description = "Mail processing utilities for Lattice"
requires-python = ">=3.11"
dependencies = [
    "lattice-common",
    "lattice-contracts",
    "lattice-storage",
    "lattice-kafka",
    "requests>=2.31.0",
    "psycopg[binary]>=3.1.0",
    "pydantic>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lattice_mail"]
