[project]
name = "lattice-storage"
version = "0.1.0"
description = "Object storage abstraction for Lattice (S3/MinIO compatible)"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "pydantic>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lattice_storage"]
