[project]
name = "lattice-evaluator"
version = "0.1.0"
description = "Lattice RAG evaluation service"
requires-python = ">=3.11"
dependencies = [
    "lattice-common",
    "lattice-contracts",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evaluator"]
